2022-01-22  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* openclose.c (open_input): Reencode nameoffile to utf8 for pTeX.
	* texmfmp.c: Change type of str_pool to unsigned short for pTeX.
	  We use only 0--511, and use flag 0x100 for Japanese char.

2022-01-01  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* printversion.c: Update copyright year.

2021-07-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmfmp.c: Apply patch of W32TeX for Visual Studio 2015
	by Kakuto-san.

2021-05-18  Karl Berry  <karl@freefriends.org>

	* usage.c (usagehelp): if bug_email arg ends in "@tug.org"
	also output the url for the mailing list.

2021-04-28  Marcel Fabian Krueger  <tex@2krueger.de>
	    Hironori KITAGAWA <h_kitagawa2001@yahoo.co.jp>
	    Karl Berry <karl@freefriends.org>

	* texmfmp.c (calledit): When looking for the filename to edit,
	skip \scantokens pseudo-files (streams 18 and 19) and indeed all
	name_field values <=255 (following tex.web), and token lists
	(state_field==0).
	
	Original reports from Don Hosek,
	https://tex.stackexchange.com/questions/594702
	and Hironori (plus patch),
	https://tug.org/pipermail/tex-k/2021-April/003542.html
	and Marcel (plus patch) for \scantokens,
	https://tug.org/pipermail/tex-live/2021-April/046846.html.

2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-03-12  Akira Kakuto  <kakuto@w32tex.org>

	* texmfmp.c: Disable commands containing a character '|' for
	write18 in restricted mode for security.

2021-01-01  Akira Kakuto  <kakuto@w32tex.org>

	* printversion.c: Update copyright year.

2020-12-10  Akira Kakuto  <kakuto@w32tex.org>

	* lib.h: Definition of eof() contradicts corecrt_io.h
	in Visual Studio 2019.

2020-09-24  Akira Kakuto  <kakuto@w32tex.org>

	* texmfmp.c: Call kpse_in_name_ok() in find_input_file() for
	getfilemoddate(), getfilesize(), getfiledump() and getmd5sum(),
	instead of in each separate routine. Doing it in the latter
	means we always check an absolute filename, and thus fail with